Fixed the issue with image cropping in dialog and added scroll behaviour

--- a/custom-elements/custom-dialog/css/custom-dialog.css
+++ b/custom-elements/custom-dialog/css/custom-dialog.css
@@ -55,7 +55,7 @@
 }
 
 .dialog {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 10%;
     width: 80%;
@@ -64,10 +64,12 @@
 }
 
 .dialog-content {
-    margin: 30% 10%;
-    /* overflow-y: scroll; */
+    position: absolute;
+    margin: 10% 10%;
+    overflow-y: auto;
+    height: 35rem;
+    max-height: 35rem;
     padding: 0 3rem;
-    transform: translateY(-30%);
 }
 
 .dialog-close {
